BBmisc_1.10:
- New argument min.versions for requirePackages
- ensureVector now can be passed multiple classes via cl parameter
- New argument ensure.list for ensureVector
- convertToShortString now also prints the content of expressions, and prints NULL like <NULL>.

- new functions
-- printHead
-- getBestIndex

BBmisc_1.9: 2015-02-03
- New argument .newline for messagef
- requirePackages can now dispatch to requireNamespace and has argument default.method.
- normalize now also handles NAs

- new functions
-- mapValues

BBmisc_1.8: 2014-10-30
- Options for the ProgressBar can now be directly passed to the constructor.
- Fixed smaller bugs in normalize

- new functions
-- itostr
-- getRelativePath
-- splitPath
-- do.call2

BBmisc_1.7: 21-Jun-2014
- extractSubList allows for repeated indexing

- new functions:
-- asQuoted
-- collapsef
-- ensureVector
-- explode
-- getAttributeNames
-- getClass1
-- getUsedFactorLevels
-- hasAttributes
-- isSubset, isSuperset
-- makeFileCache
-- normalize
-- setValue
-- optimizeSubInts

BBmisc_1.6: 23-Apr-2014
- the ProgressBar now outputs to stderr by default. But the stream can be configured.
- improve handling of result names (row.names and col.names) in some functions a bit
- convertRowsToList now converts matrices into list of vector by default (see new arg "as.vector")
- rename first, last to which.first, which.last
- improved extractSubList and rowSapply a bit,
  simplification to matrix can be stated in a more readable way.
- new functions:
-- operator %btwn%.
-- convertListOfRowsToDataFrame
-- convertMatrixType
-- convertColsToList
-- v*apply type of functions
-- dapply
-- rangeVal
-- getFirst, getLast
-- symdiff
-- asMatrixCols, asMatrixRows
-- isScalar<Type> family of helper functions
-- sortByCol

BBmisc_1.5: 25-Jan-2014
- removed stringsAsFactors, use convertDataFrameCols
- removed convertDfCols, use convertDataFrameCols
- removed listToShortString, use convertToShortString
- new functions:
-- dropNamed
-- first, last