@@ -25,5 +25,5 @@ Suggests:
     codetools
 LazyData: yes
 ByteCompile: yes
-Version: 1.10
-RoxygenNote: 5.0.1
+Version: 1.11
+RoxygenNote: 6.0.0
