@@ -5,13 +5,14 @@
 #' Numerics are formated with \code{num.format}.
 #' If of length greater than 1, they are collapsed witd \dQuote{,} and clipped.
 #' so they do not become excessively long.
+#' Expressions will be converted to plain text.
 #'
 #' All others: Currently, only their class is simply printed
 #' like \dQuote{<data.frame>}.
 #'
 #' Lists: The mechanism above is applied (non-recursively) to their elements.
 #' The result looks like this:
-#' \dQuote{a = 1, <unamed> = 2, b = <data.frame>, c = <list>}.
+#' \dQuote{a=1, <unamed>=2, b=<data.frame>, c=<list>}.
 #'
 #' @param x [any]\cr
 #'   The object.
